--- a/Notebooks/pandas.ipynb
+++ b/Notebooks/pandas.ipynb
@@ -4,6 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "![](pandas.jpg)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Pandas\n",
     "Para estudar a biblioteca Pandas, esse notebook irá analisar uma base de dados que contém a performance de estudantes."
    ]
